@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+      [ENHANCEMENTS]
+
+      - Added a refresh() method that clears the permission hash
+      if the file on disk is newer.  New permissions will be
+      loaded lazily.
+
 0.003     2013-12-26 23:15:35 America/Los_Angeles
 
       [BUG FIXES]
